added chart observing

--- a/app/models/TODO
+++ b/app/models/TODO
@@ -4,4 +4,8 @@ OperatorHandler -------> need to be removed ????
 pages --> constructor
 
 
-DEO add -> temp password with email 
+--------------------------------------------------------------2021/12/30--------------------------------------
+
+vaccination batch number ----- actual card has one
+
+Patient admit and recovery Observers how ??????
