--- a/app/models/TODO
+++ b/app/models/TODO
@@ -9,6 +9,6 @@ Patient admit and recovery Observers how ??????
 ----------------------------------------Lassana lamaya--------------------------------------------------------
 
 date format
-=======
 Patient admit and recovery Observers how ??????
+Setting password 
 
