--- a/app/models/TODO
+++ b/app/models/TODO
@@ -1,11 +1,7 @@
 --------------------------------------------------------------2021/12/30--------------------------------------
 
-<<<<<<< HEAD
-vaccination batch number ----- actual card has one
-
-Patient admit and recovery Observers how ??????
-
-
+//TODO --- doubling covid death from patients
+//TODO ---- updating from poops form ?????????
 ----------------------------------------Lassana lamaya--------------------------------------------------------
 
 date format
