addded first time logger

--- a/app/models/TODO
+++ b/app/models/TODO
@@ -1,10 +1,13 @@
---------------------------------------------------------------2021/12/30--------------------------------------
-
-//TODO --- doubling covid death from patients
-//TODO ---- updating from poops form ?????????
 ----------------------------------------Lassana lamaya--------------------------------------------------------
 
 date format
 Patient admit and recovery Observers how ??????
 Setting password 
 
+--------------------------------------TO_DO for Supun the WADDA --------------------------------------------------------
+
+first page -> disable hover
+settings page -> overlay, 
+                'Settings' title is fixed; problem - in case of "first time login alert " 
+patient page
+death page
