not completed settings

--- a/app/models/TODO
+++ b/app/models/TODO
@@ -1,8 +1,7 @@
 ----------------------------------------Lassana lamaya--------------------------------------------------------
 
 date format
-Patient admit and recovery Observers how ??????
-Setting password 
+Setting password ---------- registration password restriction
 
 --------------------------------------TO_DO for Supun the WADDA --------------------------------------------------------
 
