--- a/app/models/TODO
+++ b/app/models/TODO
@@ -9,3 +9,8 @@ settings page -> overlay,
                 'Settings' title is fixed; problem - in case of "first time login alert " 
 patient page
 death page
+
+
+----------------------------------POOPs-----------------------------------
+data manage -> count change
+password restriction
