--- a/app/models/TODO
+++ b/app/models/TODO
@@ -16,7 +16,7 @@ customize
 
 pcr, antigen 
                 update -> positive to negative
-                delete 
+                delete  --- transaction possible
 
 death - delete - count
 
