user dashboard: style changes for health ID search

--- a/app/models/TODO
+++ b/app/models/TODO
@@ -4,10 +4,10 @@ settings- email verify
 
 --------------------------------------TO_DO for Supun the WADDA --------------------------------------------------------
 
-animation
-
 customize
 
+<!-- TODO: add covid-bottom-tr class to the end of the table -->
 
+TODO: Health ID Not found pop up when page refreash
 
 
