Overall: style bugs fixed

--- a/app/models/TODO
+++ b/app/models/TODO
@@ -6,6 +6,6 @@ settings- email verify
 
 customize
 
-<!-- TODO: add covid-bottom-tr class to the end of the table -->
+Headers of table apear when searching for a citizen in vaccination
 
 
