--- a/app/models/TODO
+++ b/app/models/TODO
@@ -5,5 +5,5 @@ settings- email verify
 --------------------------------------TO_DO for Supun the WADDA --------------------------------------------------------
 
 customize
-
+error page ---> view-> error.php
 
